# diagnosable-systems-simulation

./: .gitignore  README.md  pyproject.toml
diagnosable_systems_simulation/: __init__.py  backends.py
diagnosable_systems_simulation/actions/: __init__.py  base.py  diagnostic_actions.py  fault_actions.py  observation.py  preconditions.py
diagnosable_systems_simulation/electrical_simulation/: __init__.py  circuit.py  results.py  solver.py
diagnosable_systems_simulation/electrical_simulation/backend/: __init__.py  base.py  spice.py  stub.py
diagnosable_systems_simulation/systems/: __init__.py  base_system.py
diagnosable_systems_simulation/systems/ambient_light_sensor/: components.py  factory.py
diagnosable_systems_simulation/systems/shared/: __init__.py  module_builders.py
diagnosable_systems_simulation/systems/ten_cubes/: __init__.py  components.py  factory.py
diagnosable_systems_simulation/systems/three_cubes/: __init__.py  components.py  factory.py
diagnosable_systems_simulation/utils/: __init__.py  dump.py  units.py
diagnosable_systems_simulation/world/: affordances.py  components.py  context.py  knowledge_graph.py  ports.py  spatial.py
examples/: three_cubes_demo.py
nl_interface/: __init__.py  interface.py
tests/: test_agent.py  test_nl_interface_prompt.py  test_simulation.py
