[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnosable-systems-simulation"
version = "0.2.0"
description = "Framework for simulating diagnosable physical systems with fault injection and LLM-based diagnosis"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{name="Francesco Compagno", email="f.compagno@uva.nl"}]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
spice = [
    "PySpice>=1.5",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
dev = [
    "pytest>=7.0",
]
all = [
    "PySpice>=1.5",
    "openai>=1.0",
    "anthropic>=0.20",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diagnosable_systems_simulation*", "nl_interface*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
